added field and modified images

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "next": "^9.0.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-draggable": "^4.0.3"
+    "react-draggable": "^4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1"
   }
 }
